--- a/index.html
+++ b/index.html
@@ -737,15 +737,15 @@
                 <div class="logo-container">
                     <div class="app-icon">
                         <img
-  src="/_vercel/image?url=/ok11icon.webp&w=320&q=40"
+  src="https://ok11.vercel.app/ok11icon.webp"
   srcset="
-    /_vercel/image?url=/ok11icon.webp&w=320&q=40 320w,
-    /_vercel/image?url=/ok11icon.webp&w=512&q=60 512w,
-    /_vercel/image?url=/ok11icon.webp&w=768&q=75 768w
+    https://ok11.vercel.app/ok11icon.webp 320w,
+    https://ok11.vercel.app/ok11icon.webp 512w,
+    https://ok11.vercel.app/ok11icon.webp 768w
   "
-  sizes="(max-width: 768px) 100vw, 512px"
-  width="768"
-  height="768"
+  sizes="(max-width: 768px) 120px, 180px"
+  width="180"
+  height="180"
   loading="eager"
   decoding="async"
   alt="OK11 Game Official App Icon">
